[package]
name = "sort_wasm"
version = "0.1.0"
authors = ["darklamp <alessandro17.villa@mail.polimi.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "^0.2.69", features = ["serde-serialize"] }
rayon = "1.5"
serde_json = { version = "1.0.61" }
serde = { version = "1.0.118", features = ["derive"] }
js-sys = "0.3.46"

[profile.release]
lto = true